<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Demo</string>
    <string name="search_label">Search Streams</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Connexus</string>
    <string name="ViewNearby">Nearby Pictures</string>
    <string name="uploadImage">Upload Image</string>
    <string name="upload_hint">Add a caption for photo</string>
    <string name="search_hint">Find streams</string>
    <string name="choose_from_library">Choose From Library</string>
    <string name="use_camera">Use camera</string>
    <string name="search">Search</string>
    <string name="subscribe_stream">My Subscribed Streams</string>

    <string name="title_activity_display_images">Display Streams</string>
    <string name="title_activity_display_single_stream">Display Single Stream</string>
    <string name="title_search_stream">Search Stream</string>
    <string name="title_activity_take_pictures">Take Pictures</string>
    <string name="imagePage">View All Streams</string>
    <string name="subscribedStream">View All Subscribed Streams</string>
    <string name="showmoreActivity"> Show More </string>
    <string name="uploadImageActivity"> Upload a new image</string>
    <string name="title_activity_image_upload">ImageUpload</string>



    <string name="circles_title">Visible circles:</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke</string>

    <string name="status_sign_in_required">Sign-in required</string>
    <string name="status_sign_in_error">Error signing in: %s</string>
    <string name="status_loading">Loading…</string>
    <string name="status_signing_in">Signing in with Google+…</string>
    <string name="status_signed_out">Signed out</string>
    <string name="status_revoke_access">Revoked access</string>
    <string name="status_revoke_access_error">Error revoking access: %s</string>
    <string name="signed_in_as">Signed in as %s</string>

    <!-- Used if there was an error loading the signed in user's name. -->
    <string name="unknown_person">Unknown</string>
    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="close">Close</string>
    <string name="profile_picture">User\'s profile picture.</string>
    <string name="mock_server_has_token">Mock server has refresh token?</string>
    <string name="request_server_auth_code">Request server auth code?</string>
    <string name="configuration_error">Error: the value of WEB_CLIENT_ID or SERVER_BASE_URL is not  set correctly. This will cause errors when requesting a server auth code.</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_view_subscribed_stream">ViewSubscribedStream</string>
    <string name="title_activity_view_nearby">ViewNearby</string>
    <string name="title_activity_show_more">ShowMore</string>


</resources>
