<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/response_scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    >
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="apt.com.miniproject.ViewStream">

    <TextView
        android:text="@string/imagePage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="40sp"
        android:paddingBottom = "40sp"
        />

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnWidth="90dp"
        android:numColumns="4"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/search_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:inputType="text"
            />

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:onClick="searchHandler"
            />

        <Button
            android:id="@+id/view_nearby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ViewNearby"
            android:onClick="viewNearbyHandler"
            />
    </LinearLayout>
    <!--<searchable xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:label="@string/search_label"-->
        <!--android:hint="@string/search_hint" >-->
    <!--</searchable>-->

    <Button
        android:id="@+id/subscribe_stream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subscribe_stream"
        android:onClick="viewSubscribedStreams"
        />


</LinearLayout>
</ScrollView>