<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="apt.com.miniproject.SearchStream">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/search_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:inputType="text"
            />

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:onClick="searchHandler"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/result_mesage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip" />
        <!--android:text="@string/status_signed_out" />-->


    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnWidth="90dp"
        android:numColumns="4"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        />

    <!--<searchable xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:label="@string/search_label"-->
    <!--android:hint="@string/search_hint" >-->
    <!--</searchable>-->

    <Button
        android:id="@+id/view_all_streams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imagePage"
        android:onClick="viewStream"
        />


</LinearLayout>